# spaceace

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PROMPT.md  README.md  cs  deploy.sh  index.html  mcts_debug_recording.json  play.py  pyproject.toml  ralph.sh  run.py  run_refactor_agents.sh  tas.py  train.py
.beads/: issues.jsonl  metadata.json  sync_base.jsonl
dashboard/: __main__.py  app.py  assess_runner.py  db.py  job_runner.py  replay.py  sync.py
dashboard/api/: assessments.py  ghosts.py  jobs.py  leaderboard.py  metrics.py  models.py  replay.py  runs.py
dashboard/static/: index.html  renderer.js  style.css
data/: calibration_cache.json  curriculum.json  generated_levels.json  mapData.js  spaceace_levels.json
diagnostics/: level_0_20260406_220524.jsonl  level_6_20260406_215335.jsonl  level_6_20260406_215348.jsonl  level_6_20260406_220442.jsonl  level_6_20260406_221259.jsonl  level_6_20260406_221536.jsonl  level_6_20260406_222122.jsonl  level_6_20260406_222223.jsonl  level_6_20260406_222931.jsonl  level_6_20260406_222956.jsonl
docs/: IMPROVEMENTS.md  LEVEL_FORMAT.md  MAP_EDITOR_README.md  OBSERVATION_SPACE.md  SHIP_FIX.md  SOLVER.md  TRAINING_GUIDE.md  TRAINING_GUIDE_LEVEL_0.md
docs/refactor-plans/: 01-fold-curriculum-train.md  (+3 more)
ghost_actions/: L2_tas.json  L3_tas.json  L6_tas.json  L7_tas.json
mobile_poc/: README.md  game.js  index.html  levels.js  parity_test.mjs
scripts/: alphazero_single_level.py  analyze_tape.py  audit_kinodyn_profile.py  audit_tape.py  bench_mcts.py  bench_sweep.sh  bench_train_throughput.py  bootstrap_pod.sh  capture_ai_ghost.py  check_level_distribution.py  compare_agent_human_segments.py  compare_ghosts.py  compare_runs.py  diagnose_cpu_usage.sh  inspect_run.py  mcts_kickstart.py  perfect_solver.py  probe_agent_on_level.py  screenshot_levels.py  smoke_replay.py  smoke_solve.py  solve.py  sync_to_s3.sh  tas_endpoint_reachable_polish.py  tas_human_frame_repair.py  tas_local_search.py  tas_polish.py  tas_rendezvous.py  tas_segment_search.py  tas_trace_repair.py  visualize_level.py  watch_solver.py
spaceace/: ghost_actions.py
src/: alphazero_mcts.rs  lib.rs  mcts.rs  nn_evaluator.rs  real_collision.rs  real_game.rs  real_map_parser.rs  real_physics.rs  solver.rs
tests/: smoke.sh  test_ghost_actions.py  test_inspect_run.py  test_registries.py  test_strategies.py
web/: index.html  map_editor.html  map_editor.js
(+225 files in other folders)
