[package]
name = "spaceace-rl"
version = "0.2.0"
edition = "2021"

[lib]
name = "spaceace_rl"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["alphazero"]
extension-module = ["pyo3/extension-module"]
# AlphaZero / ONNX inference path. Disable to skip the `ort` dependency,
# which pulls in a prebuilt onnxruntime that may fail to link on hosts with
# an older glibc/libstdc++ than the prebuilt was compiled against. The MCTS
# and A* planners do not depend on this feature.
alphazero = ["dep:ort"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.25" }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = "0.16"
rayon = "1.10"
