[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "spaceace-rl"
version = "0.2.0"
description = "High-performance Rust-based reinforcement learning environment for SpaceAce"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.21.0",
    "stable-baselines3[extra]>=2.0.0",
    "torch>=1.11.0",
    "tensorboard>=2.10.0",
    "pygame>=2.5.0",
    "onnx>=1.14.0",
    "flask>=3.0.0",
]

[tool.maturin]
features = ["extension-module"]
module-name = "spaceace_rl"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]
